# auto-ohin

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
auto_ohin/: auto_ohin.py  main.py  ohin.py  overlay_pdf_maker.py
experiments/: sample_config.jsonnet
tests/: test_auto_ohin.py
